odoo-k8s/manifests/07-service-postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  namespace: odoo
spec:
  # clusterIP: None
  selector:
    app: postgres
  ports:
    - port: 5432
